--- a/Energy demand prediction using machine learning.ipynb
+++ b/Energy demand prediction using machine learning.ipynb
@@ -228,6 +228,468 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.get_dummies(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "26.54711262587734\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import mean_squared_error\n",
+    "\n",
+    "X,y = df.drop(['EnergyConsumption'], axis =1), df['EnergyConsumption']\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size =0.2, random_state =42)\n",
+    "\n",
+    "model = LinearRegression()\n",
+    "model.fit(X_train, y_train)\n",
+    "\n",
+    "y_pred = model.predict(X_test)\n",
+    "\n",
+    "print(mean_squared_error(y_test, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Temperature</th>\n",
+       "      <th>Humidity</th>\n",
+       "      <th>SquareFootage</th>\n",
+       "      <th>Occupancy</th>\n",
+       "      <th>RenewableEnergy</th>\n",
+       "      <th>Timestamp_2022-01-01 00:00:00</th>\n",
+       "      <th>Timestamp_2022-01-01 01:00:00</th>\n",
+       "      <th>Timestamp_2022-01-01 02:00:00</th>\n",
+       "      <th>Timestamp_2022-01-01 03:00:00</th>\n",
+       "      <th>Timestamp_2022-01-01 04:00:00</th>\n",
+       "      <th>...</th>\n",
+       "      <th>LightingUsage_On</th>\n",
+       "      <th>DayOfWeek_Friday</th>\n",
+       "      <th>DayOfWeek_Monday</th>\n",
+       "      <th>DayOfWeek_Saturday</th>\n",
+       "      <th>DayOfWeek_Sunday</th>\n",
+       "      <th>DayOfWeek_Thursday</th>\n",
+       "      <th>DayOfWeek_Tuesday</th>\n",
+       "      <th>DayOfWeek_Wednesday</th>\n",
+       "      <th>Holiday_No</th>\n",
+       "      <th>Holiday_Yes</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>25.139433</td>\n",
+       "      <td>43.431581</td>\n",
+       "      <td>1565.693999</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2.774699</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>27.731651</td>\n",
+       "      <td>54.225919</td>\n",
+       "      <td>1411.064918</td>\n",
+       "      <td>1</td>\n",
+       "      <td>21.831384</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>...</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>28.704277</td>\n",
+       "      <td>58.907658</td>\n",
+       "      <td>1755.715009</td>\n",
+       "      <td>2</td>\n",
+       "      <td>6.764672</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>20.080469</td>\n",
+       "      <td>50.371637</td>\n",
+       "      <td>1452.316318</td>\n",
+       "      <td>1</td>\n",
+       "      <td>8.623447</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>...</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>23.097359</td>\n",
+       "      <td>51.401421</td>\n",
+       "      <td>1094.130359</td>\n",
+       "      <td>9</td>\n",
+       "      <td>3.071969</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>995</th>\n",
+       "      <td>28.619382</td>\n",
+       "      <td>48.850160</td>\n",
+       "      <td>1080.087000</td>\n",
+       "      <td>5</td>\n",
+       "      <td>21.194696</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>996</th>\n",
+       "      <td>23.836647</td>\n",
+       "      <td>47.256435</td>\n",
+       "      <td>1705.235156</td>\n",
+       "      <td>4</td>\n",
+       "      <td>25.748176</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>...</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>997</th>\n",
+       "      <td>23.005340</td>\n",
+       "      <td>48.720501</td>\n",
+       "      <td>1320.285281</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0.297079</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>...</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>998</th>\n",
+       "      <td>25.138365</td>\n",
+       "      <td>31.306459</td>\n",
+       "      <td>1309.079719</td>\n",
+       "      <td>3</td>\n",
+       "      <td>20.425163</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>999</th>\n",
+       "      <td>23.051165</td>\n",
+       "      <td>42.615421</td>\n",
+       "      <td>1018.140606</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2.455657</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>...</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1000 rows × 1018 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Temperature   Humidity  SquareFootage  Occupancy  RenewableEnergy  \\\n",
+       "0      25.139433  43.431581    1565.693999          5         2.774699   \n",
+       "1      27.731651  54.225919    1411.064918          1        21.831384   \n",
+       "2      28.704277  58.907658    1755.715009          2         6.764672   \n",
+       "3      20.080469  50.371637    1452.316318          1         8.623447   \n",
+       "4      23.097359  51.401421    1094.130359          9         3.071969   \n",
+       "..           ...        ...            ...        ...              ...   \n",
+       "995    28.619382  48.850160    1080.087000          5        21.194696   \n",
+       "996    23.836647  47.256435    1705.235156          4        25.748176   \n",
+       "997    23.005340  48.720501    1320.285281          6         0.297079   \n",
+       "998    25.138365  31.306459    1309.079719          3        20.425163   \n",
+       "999    23.051165  42.615421    1018.140606          6         2.455657   \n",
+       "\n",
+       "     Timestamp_2022-01-01 00:00:00  Timestamp_2022-01-01 01:00:00  \\\n",
+       "0                             True                          False   \n",
+       "1                            False                           True   \n",
+       "2                            False                          False   \n",
+       "3                            False                          False   \n",
+       "4                            False                          False   \n",
+       "..                             ...                            ...   \n",
+       "995                          False                          False   \n",
+       "996                          False                          False   \n",
+       "997                          False                          False   \n",
+       "998                          False                          False   \n",
+       "999                          False                          False   \n",
+       "\n",
+       "     Timestamp_2022-01-01 02:00:00  Timestamp_2022-01-01 03:00:00  \\\n",
+       "0                            False                          False   \n",
+       "1                            False                          False   \n",
+       "2                             True                          False   \n",
+       "3                            False                           True   \n",
+       "4                            False                          False   \n",
+       "..                             ...                            ...   \n",
+       "995                          False                          False   \n",
+       "996                          False                          False   \n",
+       "997                          False                          False   \n",
+       "998                          False                          False   \n",
+       "999                          False                          False   \n",
+       "\n",
+       "     Timestamp_2022-01-01 04:00:00  ...  LightingUsage_On  DayOfWeek_Friday  \\\n",
+       "0                            False  ...             False             False   \n",
+       "1                            False  ...              True             False   \n",
+       "2                            False  ...             False             False   \n",
+       "3                            False  ...              True             False   \n",
+       "4                             True  ...             False              True   \n",
+       "..                             ...  ...               ...               ...   \n",
+       "995                          False  ...             False             False   \n",
+       "996                          False  ...              True             False   \n",
+       "997                          False  ...              True              True   \n",
+       "998                          False  ...             False             False   \n",
+       "999                          False  ...              True             False   \n",
+       "\n",
+       "     DayOfWeek_Monday  DayOfWeek_Saturday  DayOfWeek_Sunday  \\\n",
+       "0                True               False             False   \n",
+       "1               False                True             False   \n",
+       "2               False               False              True   \n",
+       "3               False               False             False   \n",
+       "4               False               False             False   \n",
+       "..                ...                 ...               ...   \n",
+       "995             False                True             False   \n",
+       "996             False               False             False   \n",
+       "997             False               False             False   \n",
+       "998             False               False             False   \n",
+       "999             False                True             False   \n",
+       "\n",
+       "     DayOfWeek_Thursday  DayOfWeek_Tuesday  DayOfWeek_Wednesday  Holiday_No  \\\n",
+       "0                 False              False                False        True   \n",
+       "1                 False              False                False        True   \n",
+       "2                 False              False                False        True   \n",
+       "3                 False              False                 True        True   \n",
+       "4                 False              False                False        True   \n",
+       "..                  ...                ...                  ...         ...   \n",
+       "995               False              False                False        True   \n",
+       "996               False               True                False       False   \n",
+       "997               False              False                False       False   \n",
+       "998                True              False                False       False   \n",
+       "999               False              False                False        True   \n",
+       "\n",
+       "     Holiday_Yes  \n",
+       "0          False  \n",
+       "1          False  \n",
+       "2          False  \n",
+       "3          False  \n",
+       "4          False  \n",
+       "..           ...  \n",
+       "995        False  \n",
+       "996         True  \n",
+       "997         True  \n",
+       "998         True  \n",
+       "999        False  \n",
+       "\n",
+       "[1000 rows x 1018 columns]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
