--- a/Energy demand prediction using machine learning.ipynb
+++ b/Energy demand prediction using machine learning.ipynb
@@ -9,28 +9,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns"
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"D:\\SAGES\\Projekt końcowy\\Energy_consumption.csv\")"
+    "df = pd.read_csv(\"D:\\SAGES\\project\\Energy_consumption.csv\", parse_dates=['Timestamp'], index_col='Timestamp').iloc[:10]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +53,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Timestamp</th>\n",
        "      <th>Temperature</th>\n",
        "      <th>Humidity</th>\n",
        "      <th>SquareFootage</th>\n",
@@ -66,11 +64,23 @@
        "      <th>Holiday</th>\n",
        "      <th>EnergyConsumption</th>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Timestamp</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2022-01-01 00:00:00</td>\n",
+       "      <th>2022-01-01 00:00:00</th>\n",
        "      <td>25.139433</td>\n",
        "      <td>43.431581</td>\n",
        "      <td>1565.693999</td>\n",
@@ -83,8 +93,7 @@
        "      <td>75.364373</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2022-01-01 01:00:00</td>\n",
+       "      <th>2022-01-01 01:00:00</th>\n",
        "      <td>27.731651</td>\n",
        "      <td>54.225919</td>\n",
        "      <td>1411.064918</td>\n",
@@ -97,8 +106,7 @@
        "      <td>83.401855</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2022-01-01 02:00:00</td>\n",
+       "      <th>2022-01-01 02:00:00</th>\n",
        "      <td>28.704277</td>\n",
        "      <td>58.907658</td>\n",
        "      <td>1755.715009</td>\n",
@@ -111,8 +119,7 @@
        "      <td>78.270888</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2022-01-01 03:00:00</td>\n",
+       "      <th>2022-01-01 03:00:00</th>\n",
        "      <td>20.080469</td>\n",
        "      <td>50.371637</td>\n",
        "      <td>1452.316318</td>\n",
@@ -125,8 +132,7 @@
        "      <td>56.519850</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2022-01-01 04:00:00</td>\n",
+       "      <th>2022-01-01 04:00:00</th>\n",
        "      <td>23.097359</td>\n",
        "      <td>51.401421</td>\n",
        "      <td>1094.130359</td>\n",
@@ -143,29 +149,32 @@
        "</div>"
       ],
       "text/plain": [
-       "             Timestamp  Temperature   Humidity  SquareFootage  Occupancy  \\\n",
-       "0  2022-01-01 00:00:00    25.139433  43.431581    1565.693999          5   \n",
-       "1  2022-01-01 01:00:00    27.731651  54.225919    1411.064918          1   \n",
-       "2  2022-01-01 02:00:00    28.704277  58.907658    1755.715009          2   \n",
-       "3  2022-01-01 03:00:00    20.080469  50.371637    1452.316318          1   \n",
-       "4  2022-01-01 04:00:00    23.097359  51.401421    1094.130359          9   \n",
+       "                     Temperature   Humidity  SquareFootage  Occupancy  \\\n",
+       "Timestamp                                                               \n",
+       "2022-01-01 00:00:00    25.139433  43.431581    1565.693999          5   \n",
+       "2022-01-01 01:00:00    27.731651  54.225919    1411.064918          1   \n",
+       "2022-01-01 02:00:00    28.704277  58.907658    1755.715009          2   \n",
+       "2022-01-01 03:00:00    20.080469  50.371637    1452.316318          1   \n",
+       "2022-01-01 04:00:00    23.097359  51.401421    1094.130359          9   \n",
        "\n",
-       "  HVACUsage LightingUsage  RenewableEnergy  DayOfWeek Holiday  \\\n",
-       "0        On           Off         2.774699     Monday      No   \n",
-       "1        On            On        21.831384   Saturday      No   \n",
-       "2       Off           Off         6.764672     Sunday      No   \n",
-       "3       Off            On         8.623447  Wednesday      No   \n",
-       "4        On           Off         3.071969     Friday      No   \n",
+       "                    HVACUsage LightingUsage  RenewableEnergy  DayOfWeek  \\\n",
+       "Timestamp                                                                 \n",
+       "2022-01-01 00:00:00        On           Off         2.774699     Monday   \n",
+       "2022-01-01 01:00:00        On            On        21.831384   Saturday   \n",
+       "2022-01-01 02:00:00       Off           Off         6.764672     Sunday   \n",
+       "2022-01-01 03:00:00       Off            On         8.623447  Wednesday   \n",
+       "2022-01-01 04:00:00        On           Off         3.071969     Friday   \n",
        "\n",
-       "   EnergyConsumption  \n",
-       "0          75.364373  \n",
-       "1          83.401855  \n",
-       "2          78.270888  \n",
-       "3          56.519850  \n",
-       "4          70.811732  "
+       "                    Holiday  EnergyConsumption  \n",
+       "Timestamp                                       \n",
+       "2022-01-01 00:00:00      No          75.364373  \n",
+       "2022-01-01 01:00:00      No          83.401855  \n",
+       "2022-01-01 02:00:00      No          78.270888  \n",
+       "2022-01-01 03:00:00      No          56.519850  \n",
+       "2022-01-01 04:00:00      No          70.811732  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -176,14 +185,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\DELL\\AppData\\Local\\Temp\\ipykernel_16532\\3995414975.py:2: UserWarning: \n",
+      "C:\\Users\\DELL\\AppData\\Local\\Temp\\ipykernel_14024\\3995414975.py:2: UserWarning: \n",
       "\n",
       "`distplot` is a deprecated function and will be removed in seaborn v0.14.0.\n",
       "\n",
@@ -204,7 +213,7 @@
        "<function matplotlib.pyplot.show(close=None, block=None)>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -228,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
