--- a/Energy demand prediction using machine learning.ipynb
+++ b/Energy demand prediction using machine learning.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,73 +20,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"D:\\SAGES\\project\\Energy_consumption.csv\")"
+    "df = pd.read_csv(\"D:\\SAGES\\project\\Energy_consumption.csv\", parse_dates=['Timestamp'], index_col='Timestamp').iloc[:10]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    ", parse_dates=['Timestamp'], index_col='Timestamp').iloc[:10]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<bound method DataFrame.info of                Timestamp  Temperature   Humidity  SquareFootage  Occupancy  \\\n",
-       "0    2022-01-01 00:00:00    25.139433  43.431581    1565.693999          5   \n",
-       "1    2022-01-01 01:00:00    27.731651  54.225919    1411.064918          1   \n",
-       "2    2022-01-01 02:00:00    28.704277  58.907658    1755.715009          2   \n",
-       "3    2022-01-01 03:00:00    20.080469  50.371637    1452.316318          1   \n",
-       "4    2022-01-01 04:00:00    23.097359  51.401421    1094.130359          9   \n",
-       "..                   ...          ...        ...            ...        ...   \n",
-       "995  2022-02-11 11:00:00    28.619382  48.850160    1080.087000          5   \n",
-       "996  2022-02-11 12:00:00    23.836647  47.256435    1705.235156          4   \n",
-       "997  2022-02-11 13:00:00    23.005340  48.720501    1320.285281          6   \n",
-       "998  2022-02-11 14:00:00    25.138365  31.306459    1309.079719          3   \n",
-       "999  2022-02-11 15:00:00    23.051165  42.615421    1018.140606          6   \n",
+       "<bound method DataFrame.info of                      Temperature   Humidity  SquareFootage  Occupancy  \\\n",
+       "Timestamp                                                               \n",
+       "2022-01-01 00:00:00    25.139433  43.431581    1565.693999          5   \n",
+       "2022-01-01 01:00:00    27.731651  54.225919    1411.064918          1   \n",
+       "2022-01-01 02:00:00    28.704277  58.907658    1755.715009          2   \n",
+       "2022-01-01 03:00:00    20.080469  50.371637    1452.316318          1   \n",
+       "2022-01-01 04:00:00    23.097359  51.401421    1094.130359          9   \n",
+       "2022-01-01 05:00:00    29.576037  36.824263    1871.709180          6   \n",
+       "2022-01-01 06:00:00    25.131167  35.709622    1607.001228          6   \n",
+       "2022-01-01 07:00:00    23.182844  31.679920    1633.955330          8   \n",
+       "2022-01-01 08:00:00    25.391999  46.399364    1240.309224          6   \n",
+       "2022-01-01 09:00:00    22.212549  32.418464    1705.420336          1   \n",
        "\n",
-       "    HVACUsage LightingUsage  RenewableEnergy  DayOfWeek Holiday  \\\n",
-       "0          On           Off         2.774699     Monday      No   \n",
-       "1          On            On        21.831384   Saturday      No   \n",
-       "2         Off           Off         6.764672     Sunday      No   \n",
-       "3         Off            On         8.623447  Wednesday      No   \n",
-       "4          On           Off         3.071969     Friday      No   \n",
-       "..        ...           ...              ...        ...     ...   \n",
-       "995       Off           Off        21.194696   Saturday      No   \n",
-       "996       Off            On        25.748176    Tuesday     Yes   \n",
-       "997       Off            On         0.297079     Friday     Yes   \n",
-       "998        On           Off        20.425163   Thursday     Yes   \n",
-       "999       Off            On         2.455657   Saturday      No   \n",
+       "                    HVACUsage LightingUsage  RenewableEnergy  DayOfWeek  \\\n",
+       "Timestamp                                                                 \n",
+       "2022-01-01 00:00:00        On           Off         2.774699     Monday   \n",
+       "2022-01-01 01:00:00        On            On        21.831384   Saturday   \n",
+       "2022-01-01 02:00:00       Off           Off         6.764672     Sunday   \n",
+       "2022-01-01 03:00:00       Off            On         8.623447  Wednesday   \n",
+       "2022-01-01 04:00:00        On           Off         3.071969     Friday   \n",
+       "2022-01-01 05:00:00       Off           Off        17.626690     Sunday   \n",
+       "2022-01-01 06:00:00        On           Off        24.264702     Friday   \n",
+       "2022-01-01 07:00:00       Off           Off        27.517099   Thursday   \n",
+       "2022-01-01 08:00:00        On           Off         2.307595     Sunday   \n",
+       "2022-01-01 09:00:00        On           Off        29.140071    Tuesday   \n",
        "\n",
-       "     EnergyConsumption  \n",
-       "0            75.364373  \n",
-       "1            83.401855  \n",
-       "2            78.270888  \n",
-       "3            56.519850  \n",
-       "4            70.811732  \n",
-       "..                 ...  \n",
-       "995          82.306692  \n",
-       "996          66.577320  \n",
-       "997          72.753471  \n",
-       "998          76.950389  \n",
-       "999          71.545311  \n",
-       "\n",
-       "[1000 rows x 11 columns]>"
+       "                    Holiday  EnergyConsumption  \n",
+       "Timestamp                                       \n",
+       "2022-01-01 00:00:00      No          75.364373  \n",
+       "2022-01-01 01:00:00      No          83.401855  \n",
+       "2022-01-01 02:00:00      No          78.270888  \n",
+       "2022-01-01 03:00:00      No          56.519850  \n",
+       "2022-01-01 04:00:00      No          70.811732  \n",
+       "2022-01-01 05:00:00     Yes          84.321885  \n",
+       "2022-01-01 06:00:00     Yes          76.165791  \n",
+       "2022-01-01 07:00:00     Yes          74.131906  \n",
+       "2022-01-01 08:00:00      No          78.206236  \n",
+       "2022-01-01 09:00:00      No          77.992214  >"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -97,27 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "pandas.core.series.Series"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "type(df[\"Timestamp\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +231,7 @@
        "2022-01-01 04:00:00      No          70.811732  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +260,7 @@
       "\u001b[1;31mKeyError\u001b[0m: 'Timestamp'",
       "\nThe above exception was the direct cause of the following exception:\n",
       "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[5], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m df[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTimestamp\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mto_datetime(\u001b[43mdf\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mTimestamp\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m)\n",
+      "Cell \u001b[1;32mIn[29], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m df[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTimestamp\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mto_datetime(\u001b[43mdf\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mTimestamp\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m)\n",
       "File \u001b[1;32mc:\\Users\\DELL\\anaconda333\\Lib\\site-packages\\pandas\\core\\frame.py:3893\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   3891\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcolumns\u001b[38;5;241m.\u001b[39mnlevels \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[0;32m   3892\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_getitem_multilevel(key)\n\u001b[1;32m-> 3893\u001b[0m indexer \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcolumns\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   3894\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m is_integer(indexer):\n\u001b[0;32m   3895\u001b[0m     indexer \u001b[38;5;241m=\u001b[39m [indexer]\n",
       "File \u001b[1;32mc:\\Users\\DELL\\anaconda333\\Lib\\site-packages\\pandas\\core\\indexes\\base.py:3798\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   3793\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(casted_key, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;129;01mor\u001b[39;00m (\n\u001b[0;32m   3794\u001b[0m         \u001b[38;5;28misinstance\u001b[39m(casted_key, abc\u001b[38;5;241m.\u001b[39mIterable)\n\u001b[0;32m   3795\u001b[0m         \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28many\u001b[39m(\u001b[38;5;28misinstance\u001b[39m(x, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m casted_key)\n\u001b[0;32m   3796\u001b[0m     ):\n\u001b[0;32m   3797\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m InvalidIndexError(key)\n\u001b[1;32m-> 3798\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(key) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01merr\u001b[39;00m\n\u001b[0;32m   3799\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m:\n\u001b[0;32m   3800\u001b[0m     \u001b[38;5;66;03m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[0;32m   3801\u001b[0m     \u001b[38;5;66;03m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[0;32m   3802\u001b[0m     \u001b[38;5;66;03m#  the TypeError.\u001b[39;00m\n\u001b[0;32m   3803\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_check_indexing_error(key)\n",
       "\u001b[1;31mKeyError\u001b[0m: 'Timestamp'"
@@ -309,36 +278,6 @@
    "outputs": [],
    "source": [
     "df = pd.get_dummies(df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "26.54711262587734\n"
-     ]
-    }
-   ],
-   "source": [
-    "from sklearn.linear_model import LinearRegression\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.metrics import mean_squared_error\n",
-    "\n",
-    "X,y = df.drop(['EnergyConsumption'], axis =1), df['EnergyConsumption']\n",
-    "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size =0.2, random_state =42)\n",
-    "\n",
-    "model = LinearRegression()\n",
-    "model.fit(X_train, y_train)\n",
-    "\n",
-    "y_pred = model.predict(X_test)\n",
-    "\n",
-    "print(mean_squared_error(y_test, y_pred))"
    ]
   },
   {
